ext/ogg/gstoggmux.h
@@ -78,6 +78,7 @@ typedef struct
   gboolean new_page;            /* starting a new page */
   gboolean first_delta;         /* was the first packet in the page a delta */
   gboolean prev_delta;          /* was the previous buffer a delta frame */
+  gboolean data_pushed;         /* whether we pushed data already */
 
   GstPadEventFunction collect_event;
 
